[project]
name = "poppin-server"
version = "0.1.0"
description = ""
authors = [{ name = "Amber Jain", email = "jainanuamber@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi (>=0.121.2,<0.122.0)", "uvicorn (>=0.38.0,<0.39.0)", "python-dotenv (>=1.2.1,<2.0.0)"]

[tool.poetry]
packages = [{ include = "poppin_server", from = "src" }]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
black = "^25.11.0"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
